<resources>
    <string name="app_name">Demo Application</string>

    <string name="users">Users</string>
    <string name="enroll">Enroll</string>

    <string name="select_profile_photo">Select Profile Photo</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non Binary</string>
    <string name="country">Country</string>
    <string name="state">State</string>
    <string name="home_town">Home Town</string>
    <string name="phone_number">Phone Number</string>
    <string name="tel_number">Telephone Number</string>
    <string name="add_user">Add User</string>

    <string name="name">%1$s %2$s</string>
    <string name="no_users">No Users Available</string>

    <string name="please_wait">Please Wait</string>
</resources>