<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EnrollFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_profile_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="#00000000"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_image_24"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_select_profile_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/select_profile_photo"
                android:textColor="@color/blue_500"
                android:textSize="22sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/iv_profile_photo"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/tv_select_profile_photo"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textSize="18sp"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/til_first_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textSize="18sp"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_date_24"
                app:layout_constraintTop_toBottomOf="@id/til_last_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/date_of_birth"
                    android:textSize="18sp"
                    android:inputType="none"
                    android:focusable="false"
                    android:focusableInTouchMode="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="dropdown_menu"
                app:layout_constraintTop_toBottomOf="@id/til_date_of_birth"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/actv_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender"
                    android:textSize="18sp"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/til_gender"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/country"
                    android:textSize="18sp"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/til_country"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/state"
                    android:textSize="18sp"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_home_town"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/til_state"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/home_town"
                    android:textSize="18sp"
                    android:inputType="textShortMessage"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/til_home_town"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number"
                    android:textSize="18sp"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tel_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:hintTextColor="@color/blue_700"
                app:boxStrokeColor="@color/blue_700"
                app:boxStrokeWidth="2dp"
                app:endIconTint="@color/blue_500"
                app:endIconMode="clear_text"
                app:layout_constraintTop_toBottomOf="@id/til_phone_number"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tel_number"
                    android:textSize="18sp"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_add_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_user"
                android:textSize="20sp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/til_tel_number"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>